samples/_failures_safe/1761158390_76a2f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db733089.c: In function ‘main’:
./samples/SAFE/__tmp_db733089.c:174:13: error: expected ‘;’ at end of input
  174 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_db733089.c:174:5: error: expected declaration or statement at end of input
  174 |     return 0
      |     ^~~~~~
